k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myhdb
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: myhdb
  sessionAffinity: None
  type: ClusterIP
